Fix sightings marker info window contents.
Allow for an empty list of images. Put the 'more' link on its own
line. Add the plant name to each box to reinforce to the user
what they are looking at when clicking a marker, and to match
the title of the sighting detail page. Italicize the plant
name in a simple way for now. (#292)

--- a/gobotany/plantshare/templates/sighting.html
+++ b/gobotany/plantshare/templates/sighting.html
@@ -7,7 +7,8 @@
     class="plantshare sighting"{% endblock %}
 
 {% block main_content %}
-<h1>Sighting: {{ sighting.identification }} at {{ sighting.location }}</h1>
+<h1>Sighting: <i>{{ sighting.identification }}</i> at
+    {{ sighting.location }}</h1>
 
 {% location_map location=sighting.location height_px="150" width_px="302" zoom="7" id="id_location_map" %}
 
