Update the 'full page' link on the Sightings Locator.
Point to the new separate Sightings Locator page. (#292)

--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -78,7 +78,7 @@
             <p>Rare and endangered plants will not be displayed.</p>
         
             <p class="full-link"><a
-                href="{% url ps-sightings %}#sightings-locator">View full page »</a></p>
+                href="{% url ps-sightings-locator %}">View full page »</a></p>
         </form>
 
         {% sightings_map latitude=map.latitude longitude=map.longitude center_title=map.center_title height="297px" width="481px" zoom="6" id="mini-sightings-map" %}
