Show the count of sightings found atop the large map. (#292)

--- a/gobotany/plantshare/templates/sightings_locator.html
+++ b/gobotany/plantshare/templates/sightings_locator.html
@@ -26,6 +26,8 @@
         data-submit-on-select="true">
     <input type="submit" value="Go">
 
+    <p id="status"><span>0</span> sightings found</p>
+
     {% sightings_map latitude=map.latitude longitude=map.longitude center_title=map.center_title height="524px" width="710px" zoom="6" id="sightings-map" %}
 </form>
 
