Add "character" to pile-editing URLs #226
Before creating a second hierarchy beneath the /edit/cv/ top-level URL,
we need to qualify the existing pile-specific URLs with a "character"
string.

--- a/gobotany/editor/templates/gobotany/edit_piles.html
+++ b/gobotany/editor/templates/gobotany/edit_piles.html
@@ -6,8 +6,8 @@
 
 <p>
   {% for pile in piles %}
-    <a href="{{ pile.slug }}/">{{ pile.slug }}</a>
-    — {{ pile.name }}
+    {{ pile.name }}
+    — <a href="{{ pile.slug }}-characters/">characters</a>
     <br>
   {% endfor %}
 </p>
