Create a URL where we can put a taxon admin view #226
This new page will be written to provide a view of all of the character
settings for a particular taxon.

--- a/gobotany/editor/templates/gobotany/edit_piles.html
+++ b/gobotany/editor/templates/gobotany/edit_piles.html
@@ -8,6 +8,7 @@
   {% for pile in piles %}
     {{ pile.name }}
     — <a href="{{ pile.slug }}-characters/">characters</a>
+    | <a href="{{ pile.slug }}-taxa/">taxa</a>
     <br>
   {% endfor %}
 </p>
