--- a/gobotany/editor/templates/gobotany/pile_characters.html
+++ b/gobotany/editor/templates/gobotany/pile_characters.html
@@ -4,7 +4,7 @@
 
 <p>← return to <a href="..">pile list</a></p>
 
-<h1>Characters in {{ pile.slug }}</h1>
+<h1>Characters in {{ pile.name }}</h1>
 
 <h2>General characters</h2>
 
