Rename "General" to "Common" characters in admin #226
I accidentally invented the name "general" for the three characters that
all piles share, when the code already called them "common" in one place
(the constant that gives their short names), and I think that "common"
is the better name.  (Among other reasons, because "general" is in the
name of one of the two Habitat characters that are among these three
common characters!)

--- a/gobotany/editor/templates/gobotany/pile_characters.html
+++ b/gobotany/editor/templates/gobotany/pile_characters.html
@@ -6,10 +6,10 @@
 
 <h1>Characters in {{ pile.name }}</h1>
 
-<h2>General characters</h2>
+<h2>Common characters</h2>
 
 <p>
-  {% for character in general_characters %}
+  {% for character in common_characters %}
     <a href="{{ character.short_name }}/">{{ character.short_name }}</a>
     — {{ character.friendly_name }}
     <br>
