Generate a list of characters and values for admin #226
Another step towards a page that will let botanists edit the character
values for an entire species at once.

--- a/gobotany/static/sass/edit.scss
+++ b/gobotany/static/sass/edit.scss
@@ -88,6 +88,12 @@ span.all-species-button, span.simple-key-button, .save-button {
             padding: 0;
         }
     }
+
+    .charactername {
+        border-top: 1px solid $orange1;
+        padding: 2px;
+        background-color: darken($body_bg, 5);
+    }
 }
 
 .value-tips div {
