--- a/gobotany/editor/templates/gobotany/edit_pile_taxon.html
+++ b/gobotany/editor/templates/gobotany/edit_pile_taxon.html
@@ -2,7 +2,7 @@
 
 {% block js_require %}
     require(['editor/cv'], function (edit) {
-        edit.setup_pile_character_page();
+        /* edit.setup_pile_character_page(); */
     });
 {% endblock %}
 
@@ -12,38 +12,37 @@
 
 <h1>{{ taxon.scientific_name }}</h1>
 
-<h2>{{ character.short_name }}</h2>
-
-<p>
-  {% if character.friendly_name != character.name %}
-    <b>{{ character.friendly_name }}:</b>
-  {% endif %}
-  {{ character.question }}
-</p>
-
-{% if there_are_any_friendly_texts %}
-<ul>
-  {% for value in values %}
-  <li class="edit-character-definition">
-    <b>{{ value.value_str }}</b>
-    {% if value.friendly_text %}
-    — {{ value.friendly_text }}
-    {% endif %}
-  </li>
-  {% endfor %}
-</ul>
-{% endif %}
-
 <p>
   <span class="save-button">SAVE CHANGES</span>
 </p>
 
+<h2>Common characters</h2>
+
 <div class="pile-character-grid">
+  {% for character in common_characters %}
+  <div class="charactername">{{ character.name }}</div>
+  {% for value in character.values %}
+  <div>
+    <i></i><b data-cv="{{ value.id }}"
+              {% if value.checked %}class="x"{% endif %}
+              >{{ value.value_str }}</b>
+  </div>
+  {% endfor %}
+  {% endfor %}
 </div>
 
-<div class="value-tips">
-  {% for value in values %}
-  <div>{{ value.value_str }}</div>
+<h2>Pile-specific characters</h2>
+
+<div class="pile-character-grid">
+  {% for character in pile_characters %}
+  <div class="charactername">{{ character.name }}</div>
+  {% for value in character.values %}
+  <div>
+    <i></i><b data-cv="{{ value.id }}"
+              {% if value.checked %}class="x"{% endif %}
+              >{{ value.value_str }}</b>
+  </div>
+  {% endfor %}
   {% endfor %}
 </div>
 
