--- a/gobotany/static/css/edit.css
+++ b/gobotany/static/css/edit.css
@@ -26,5 +26,6 @@ span.all-species-button, span.simple-key-button, .save-button { cursor: pointer;
 .pile-character-grid b.highlight { z-index: 2; background-color: #fafae9; }
 .pile-character-grid b.highlight.x { background-color: #3c6c28; }
 .pile-character-grid b.changed { border-style: solid; border-color: #dc9402; border-width: 4px 2px; padding: 0; }
+.pile-character-grid .charactername { border-top: 1px solid #dc9402; padding: 2px; background-color: #ebebab; }
 
 .value-tips div { display: none; position: absolute; padding: 0.5em; background-color: #fafae9; border: 2px solid #dc9402; -webkit-border-radius: 1em; -moz-border-radius: 1em; -ms-border-radius: 1em; -o-border-radius: 1em; border-radius: 1em; -webkit-box-shadow: 0px 1px 4px #d3d344; -moz-box-shadow: 0px 1px 4px #d3d344; box-shadow: 0px 1px 4px #d3d344; }
