--- a/gobotany/static/css/edit.css
+++ b/gobotany/static/css/edit.css
@@ -11,7 +11,7 @@
 
 span.all-species-button, span.simple-key-button, .save-button { cursor: pointer; display: inline-block; margin: 0.8em 1em; font-weight: normal; }
 
-.pile-character-grid { position: relative; margin-top: 2em; }
+.pile-character-grid { position: relative; margin-top: 2em; /* Editing a single character for many taxa: */ }
 .pile-character-grid .column { z-index: -1; position: absolute; background-color: #fafae9; }
 .pile-character-grid h3 { background-color: #f3d281; }
 .pile-character-grid div { white-space: nowrap; }
@@ -26,7 +26,11 @@ span.all-species-button, span.simple-key-button, .save-button { cursor: pointer;
 .pile-character-grid b.highlight { z-index: 2; background-color: #fafae9; }
 .pile-character-grid b.highlight.x { background-color: #3c6c28; }
 .pile-character-grid b.changed { border-style: solid; border-color: #dc9402; border-width: 4px 2px; padding: 0; }
-.pile-character-grid .charactername { border-top: 1px solid #dc9402; padding: 2px; background-color: #ebebab; }
-.pile-character-grid .charactername:hover { background-color: #ebebab; }
+
+/* Styles specific to editing all characters of a single taxon, kept separate here in the hopes of not slowing down the browser when it is trying to render a full-out character grid as specified above. */
+.taxon-character-grid .charactername { border-top: 1px solid #dc9402; padding: 2px; background-color: #ebebab; }
+.taxon-character-grid .charactername:hover { background-color: #ebebab; }
+.taxon-character-grid label { display: inline-block; padding: 4px 2px; }
+.taxon-character-grid :checked, .taxon-character-grid :checked + label { background-color: #519136; color: white; }
 
 .value-tips div { display: none; position: absolute; padding: 0.5em; background-color: #fafae9; border: 2px solid #dc9402; -webkit-border-radius: 1em; -moz-border-radius: 1em; -ms-border-radius: 1em; -o-border-radius: 1em; border-radius: 1em; -webkit-box-shadow: 0px 1px 4px #d3d344; -moz-box-shadow: 0px 1px 4px #d3d344; box-shadow: 0px 1px 4px #d3d344; }
