--- a/gobotany/site/templates/gobotany/_footer.html
+++ b/gobotany/site/templates/gobotany/_footer.html
@@ -13,7 +13,7 @@
                     180 Hemenway Road, Framingham, MA 01701</p>
                 </div>
                 <div class="navigation">
-                    <h6>Go Botany</h6>
+                    <h6>Go Botany [{% gobotany_version %}]</h6>
                     <ul id="footer-nav" class="sections">
                         {% include "gobotany/_primary_navigation.html" %}
                     </ul>
