Correct heading capitalization on Levels 2 and 3 pages.
Allow subgroups with capital letters within them to retain that
capitalization, e.g., 'and other Aster family plants.'

--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -82,7 +82,7 @@
                                 {% endif %}
                                 <p></p>{# Mockup for Issue #254: no 'friendly_name' for now #}
                             {% else %}
-                                <h2>{{ pile.friendly_title|lower|capfirst }}</h2>
+                                <h2>{{ pile.friendly_title|capfirst }}</h2>
                                 <p>{{ pile.friendly_name|capfirst }}</p>
                             {% endif %}
 
