--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -28,7 +28,7 @@
                     &gt; <span>{{ pile.friendly_title }}</span>
                 </div>
 
-                <h1>{{ subgroup_results_page.main_heading|lower|capfirst }}</h1>
+                <h1>{{ subgroup_results_page.main_heading|capfirst }}</h1>
                 
                 <div class="working-area" aria-live="polite" 
                     aria-relevant="additions removals">
