Edit the message above the questions list.
Before, the message mentioned that there was a scrollable list
below partly for emphasis on devices where the scrollbar
buttons do not appear. It should be OK without this. (#341)

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -135,8 +135,7 @@
 
 {% block sidebar_content %}
                 <div class="section instructions">
-                    <h5>Pick a question from this
-                        scrollable list:</h5>
+                    <h5>Pick a question:</h5>
                 </div>
                 <div class="scroll">
                   <div class="loading">Loading questions…</div>
