--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -882,11 +882,7 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results h3.species-count-heading { white-space: nowrap; }
   body.skey.results .section + .section { margin-bottom: 16px; } }
 /* These styles apply to smartphones and tablets */
-@media only screen and (max-width: 1024px) { body.skey.results { /* Style the Level 3 page's questions list scrollbar differently because a regular scrollbar is not the expected way to scroll there, and has problems besides (arrows too small, vertical  bar not draggable). Instead, just present the thin vertical bar as an indicator that the area is scrollable and to provide feedback while swiping to scroll. */ }
-  body.skey.results #sidebar .scroll .jspVerticalBar { border-left: 0; }
-  body.skey.results #sidebar .scroll .jspTrack, body.skey.results #sidebar .scroll .jspArrowUp, body.skey.results #sidebar .scroll .jspArrowDown { background: none; }
-  body.skey.results #sidebar .scroll .jspPane { width: 227px !important; }
-  body.skey.results ul.option-list li:hover { background: #fff; /* No hover color */ }
+@media only screen and (max-width: 1024px) { body.skey.results ul.option-list li:hover { background: #fff; /* No hover color */ }
   body.skey.results ul.option-list li.active:hover { background: #dce890; /* Except active-filter hover color */ } }
 /* End media queries styles for Simple and Full Keys */
 /* PlantShare */
