Add a sightings count to the mini Sightings Locator.
As is already done on the main Sightings Locator page, show a
count of how many sightings were found for a given plant on
the mini Sightings Locator. (#292)

--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -67,15 +67,16 @@
                 data-submit-on-select="true">
             <input type="submit" value="Go">
 
+            <p id="sightings-status"><span>0</span> sightings found</p>
+
             <h4>How to Use</h4>
-            <p>Enter a plant name and we'll show the map where it's been seen
-            recently.</p>
+            <p>Enter a plant name and we'll show where it's been
+            seen recently.</p>
             
             <h4>Don't see a plant you think should be there?</h4>
             <p>You will see all recent sightings that others have marked for
             public view or for a PlantShare group that you belong
-            to.</p>
-            <p>Rare and endangered plants will not be displayed.</p>
+            to. Rare and endangered plants will not be displayed.</p>
         
             <p class="full-link"><a
                 href="{% url ps-sightings-locator %}">View full page »</a></p>
